# pinocchio-stake-program

./: README.md  instructions_dump.txt  repo_rust_code_part1.txt  repo_rust_code_part2.txt  rust_code_export.txt
.github/workflows/: ci.yml
program/: Cargo.toml  Makefile
program/benchmarks/: prev.csv
program/scripts/: bench_diff.py  dump_instructions.sh
program/src/: entrypoint.rs  lib.rs
program/src/crypto/: sha256.rs
program/src/helpers/: authorize.rs  utils.rs
program/src/instruction/: authorize.rs  authorize_checked.rs  deactivate.rs  deactivate_delinquent.rs  initialize.rs  initialize_checked.rs  merge_dedicated.rs  move_lamports.rs  process_authorize_checked_with_seed.rs  process_authorized_with_seeds.rs  process_delegate.rs  process_move_stake.rs  process_redelegate.rs  process_set_lockup.rs  process_set_lockup_checked.rs  split.rs  withdraw.rs
program/src/state/: accounts.rs  merge_kind.rs  mod.rs  stake.rs  stake_config.rs  stake_history.rs  stake_state_v2.rs  state.rs  vote_state.rs
program/tests/: authorize_paths.rs  authorize_with_seed.rs  dd_wire_probe.rs  deactivate.rs  deactivate_delinquent.rs  delegate.rs  initialize.rs  move_invariants.rs  move_lamports.rs  move_stake.rs  native_parity.rs  program_test.rs  return_data.rs  seed_parity.rs  set_lockup.rs  set_lockup_checked_acceptance.rs  set_lockup_checked_extra_metas.rs  set_lockup_paths.rs  vote_id_probe.rs  wire_negative.rs  wire_parity.rs  withdraw.rs
program/tests/common/: mod.rs  pin_adapter.rs
scripts/: export_rust.sh
