[package]
name = "pinocchio-stake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pinocchio = "0.9.0"
pinocchio-log = "0.5.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
shank = "0.4.2"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
# bincode for host/dev decoding of native stake wire; optional and only enabled with `std`.
bincode = { version = "1", optional = true }

[dev-dependencies]
solana-program-test = "2.3.9"
solana-sdk          = "2.3.1"
solana-system-interface = "2.0.0"
solana-stake-interface  = "2.0.1"
solana-vote-interface   = "2.0.1"
solana-config-interface = "2.0.0"
solana-stake-program    = "3.0.2"
solana-account         = "3.0.0"
solana-sdk-ids         = "3.0.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
test-case = "3"
bincode = "1"

[features]
# Build for the chain (SBF, no_std, real entrypoint, panic handler)
sbf = ["bpf-entrypoint", "wire_bincode"]

# Controls the entrypoint module inclusion
bpf-entrypoint = []
no-entrypoint = []

# Host builds use std; tests run here. Enable bincode under std for decoding.
std = ["bincode"]

# Default host/dev: std + NO entrypoint (keeps IDE/cargo happy)
default = ["std", "no-entrypoint", "wire_bincode"]
e2e = []
seed = []
cu-trace = []
wire_bincode = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[test]]
name = "program_test"
path = "tests/program_test.rs"
required-features = ["e2e"]

[[test]]
name = "authorize_with_seed"
path = "tests/authorize_with_seed.rs"
required-features = ["seed"]
